--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "frontend",
+  "name": "my-app2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.13",
-    "@mui/material": "^5.14.13",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-router": "^5.1.20",
-    "axios": "^0.27.2",
-    "http-proxy-middleware": "^2.0.6",
-    "immutable": "^5.0.0-beta.4",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.59",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "redux": "^4.2.1",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.2.3",
-    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0"
   }
 }
