--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0"
+    "@emotion/styled": "^11.11.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   }
 }
