--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   }
